Fixed and working Collaboration page with all features
You can now edit music add effects using the plugin, chat with your friends or in team, also you can download these file or save them in your personel library
