# backend/routes/collaboration.js
@@ -8,6 +8,8 @@ const r = express.Router();
 
 r.post('/session', authMiddleware, c.createSession);
 r.post('/join', authMiddleware, c.joinSession);
+r.get('/session/:id', authMiddleware, c.getSession);
+r.get('/mySessions', authMiddleware, c.getMySessions);
 r.delete('/session/:id', authMiddleware, c.deleteSession);
 r.post('/session/:id/leave', authMiddleware, c.leaveSession);
 
@@ -19,6 +21,10 @@ r.get('/files/:id/play', authMiddleware, c.playAudio);
 r.get('/files/:id/download', authMiddleware, c.downloadFile);
 r.put('/files/:id/rename', authMiddleware, c.renameFile);
 r.get('/files', authMiddleware, c.getFiles);
+r.post('/files/:id/save', authMiddleware, c.saveFileToLibrary);
+r.patch('/files/:id/assign', authMiddleware, c.assignFileToSession);
+r.post('/files/:id/saveCopy', authMiddleware, c.saveCopyToLibrary);
+r.post('/files/:id/copyToSession', authMiddleware, c.copyFileToSession);
 r.delete('/files/:id', authMiddleware, c.deleteFile);
 
 r.post('/invite', authMiddleware, c.inviteFriend);
